@@ -424,9 +424,14 @@ public:
 
 	// gain related methods
 	virtual bool	hasGain() { return false; }
+	virtual float	getGain() { return 1.; }
 	virtual std::pair<float, float>	gainInterval() {
 		return std::make_pair((float)0, (float)0);
 	}
+
+	// has temperature information
+	virtual bool	hasTemperature() { return false; }
+	virtual float	getTemperature() { return 273.1; }
 
 	// image retrievel functions
 private:
